add perl_math_int64 to objects

--- a/dist.ini
+++ b/dist.ini
@@ -25,7 +25,7 @@ header = |use Alien::libuv ();
 WriteMakefile_arg = XSMULTI => 1
 WriteMakefile_arg = CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}"
 WriteMakefile_arg = LIBS    => [ Alien::libuv->libs ]
-WriteMakefile_arg = OBJECT  => '$(O_FILES)'
+WriteMakefile_arg = OBJECT  => '$(O_FILES) perl_math_int64$(OBJ_EXT)'
 
 
 [PkgVersion]
