Forget trying XSMULTI with any external-but-included libraries. Throw it in the dist root

--- a/dist.ini
+++ b/dist.ini
@@ -22,10 +22,10 @@ ReadmeAnyFromPod.source_filename = lib/UV.pm
 delimiter = |
 header = use Config;
 header = |use Alien::libuv ();
-WriteMakefile_arg = XSMULTI => 1
+; WriteMakefile_arg = XSMULTI => 1
 WriteMakefile_arg = CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}"
 WriteMakefile_arg = LIBS    => [ Alien::libuv->libs ]
-WriteMakefile_arg = OBJECT  => '$(O_FILES) perl_math_int64$(OBJ_EXT)'
+WriteMakefile_arg = OBJECT  => '$(O_FILES)'
 
 
 [PkgVersion]
@@ -47,6 +47,11 @@ issues  = 1
 user    = genio
 [@Git]
 
+[Test::Portability]
+[Test::CleanNamespaces]
+[Test::NoTabs]
+[Test::EOL]
+[MetaTests]
 [CheckChangeLog]
 [CheckChangesHasContent]
 [Test::ChangesHasContent]
