Math::Int64 is required. Put the correct author and copyright holder in place

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name             = UV
-author           = Chase Whitener <capoeirab@cpan.org>
+author           = Daisuke Murase <typester@cpan.org>
 license          = Perl_5
-copyright_holder = Chase Whitener
-copyright_year   = 2017
+copyright_holder = Daisuke Murase
+copyright_year   = 2012
 version          = 0.001
 
 [Git::GatherDir]
