Let the redocumentation begin

--- a/dist.ini
+++ b/dist.ini
@@ -69,10 +69,11 @@ stopword = stopwords
 stopword = wordlist
 stopword = uptime
 stopword = loadavg
-stopword = libUV
+stopword = libuv
 stopword = hrtime
 stopword = getrusage
 stopword = RSS
+stopword = YAY
 
 [CopyFilesFromBuild]
 copy = Makefile.PL
