--- a/dist.ini
+++ b/dist.ini
@@ -14,18 +14,16 @@ exclude_filename = t/00-report-prereqs.t
 
 [@Starter]
 -remove = GatherDir
--remove = MakeMaker
-revision = 1
-ReadmeAnyFromPod.source_filename = lib/UV.pm
-
-[MakeMaker::Awesome]
-delimiter = |
-header = use Config;
-header = |use Alien::libuv ();
-; WriteMakefile_arg = XSMULTI => 1
-WriteMakefile_arg = CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}"
-WriteMakefile_arg = LIBS    => [ Alien::libuv->libs ]
-WriteMakefile_arg = OBJECT  => '$(O_FILES)'
+revision = 2
+installer = MakeMaker::Awesome
+Pod2Readme.source_filename = lib/UV.pm
+MakeMaker::Awesome.delimiter = |
+MakeMaker::Awesome.header[0] = use Config;
+MakeMaker::Awesome.header[1] = |use Alien::libuv ();
+; MakeMaker::Awesome.WriteMakefile_arg[0] = XSMULTI => 1
+MakeMaker::Awesome.WriteMakefile_arg[1] = CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}"
+MakeMaker::Awesome.WriteMakefile_arg[2] = LIBS    => [ Alien::libuv->libs ]
+MakeMaker::Awesome.WriteMakefile_arg[3] = OBJECT  => '$(O_FILES)'
 
 
 [PkgVersion]
