--- a/dist.ini
+++ b/dist.ini
@@ -72,6 +72,7 @@ stopword = hrtime
 stopword = getrusage
 stopword = RSS
 stopword = YAY
+stopword = SIGPROF
 
 [CopyFilesFromBuild]
 copy = Makefile.PL
