Document the loop configure method

--- a/dist.ini
+++ b/dist.ini
@@ -70,6 +70,8 @@ stopword = loadavg
 stopword = libuv
 stopword = hrtime
 stopword = getrusage
+stopword = profiler
+stopword = wakeups
 stopword = RSS
 stopword = YAY
 stopword = SIGPROF
