Update the documentation for UV::Handle and UV::Timer. make UV::Handle and ::Timer .pm files instead of .pod

--- a/dist.ini
+++ b/dist.ini
@@ -71,6 +71,9 @@ stopword = libuv
 stopword = hrtime
 stopword = getrusage
 stopword = profiler
+stopword = ref
+stopword = unref
+stopword = un
 stopword = wakeups
 stopword = RSS
 stopword = YAY
