--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,5 @@
 name             = UV
+author           = Chase Whitener <capoeirab@cpan.org>
 author           = Daisuke Murase <typester@cpan.org>
 license          = Perl_5
 copyright_holder = Daisuke Murase
