Added the beginnings of the UV::Poll handle

--- a/dist.ini
+++ b/dist.ini
@@ -67,6 +67,10 @@ stopword = github
 stopword = stopwords
 stopword = wordlist
 stopword = uptime
+stopword = bitmask
+stopword = busyloop
+stopword = scalable
+stopword = writability
 stopword = loadavg
 stopword = libuv
 stopword = hrtime
@@ -76,7 +80,9 @@ stopword = ref
 stopword = unref
 stopword = un
 stopword = wakeups
+stopword = AIX
 stopword = RSS
+stopword = TCP
 stopword = YAY
 stopword = SIGPROF
 
