allow dirty META.json file

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,7 @@ MakeMaker::Awesome.header[1] = |use Alien::libuv ();
 MakeMaker::Awesome.WriteMakefile_arg[1] = CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}"
 MakeMaker::Awesome.WriteMakefile_arg[2] = LIBS    => [ Alien::libuv->libs ]
 MakeMaker::Awesome.WriteMakefile_arg[3] = OBJECT  => '$(O_FILES)'
+Git::Check.allow_dirty = META.json
 
 
 [PkgVersion]
