Set things back up for failure with XSMULTI so mohawk can point out my stupid

--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,7 @@ Pod2Readme.source_filename = lib/UV.pm
 MakeMaker::Awesome.delimiter = |
 MakeMaker::Awesome.header[0] = use Config;
 MakeMaker::Awesome.header[1] = |use Alien::libuv ();
-; MakeMaker::Awesome.WriteMakefile_arg[0] = XSMULTI => 1
+MakeMaker::Awesome.WriteMakefile_arg[0] = XSMULTI => 1
 MakeMaker::Awesome.WriteMakefile_arg[1] = CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}"
 MakeMaker::Awesome.WriteMakefile_arg[2] = LIBS    => [ Alien::libuv->libs ]
 MakeMaker::Awesome.WriteMakefile_arg[3] = OBJECT  => '$(O_FILES)'
