--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,18 @@ perl:
 #  - "5.10"
 #  - "5.8"
 env:
-  - "HARNESS_OPTIONS=j9 TEST_POD=1"
+  - "TEST_POD=1"
+before_install:
+  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+  - source ~/travis-perl-helpers/init
+  - build-perl
+  - perl -V
+  - build-dist
+  - cd $BUILD_DIR             # $BUILD_DIR is set by the build-dist command
 install:
-  - "cpanm -n Test::More Test::Pod Test::Pod::Coverage"
-  - "cpanm -n --installdeps ."
+  - cpan-install --deps
+script:
+  - make
+  - prove -b -j$(test-jobs) $(test-files)   # parallel testing
 notifications:
   email: false
