--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ addons:
   apt:
     packages:
     - aspell
+cache:
+  directories:
+  - $HOME/.perlbrew-cache # keeps between builds here
+  - $HOME/.perlbrew-cache-split # used by split builds
 perl:
 #  - "5.26"
 #  - "5.24"
@@ -21,6 +25,7 @@ before_install:
   - git clone git://github.com/mohawk2/helpers ~/travis-perl-helpers -b fix-ci
   - source ~/travis-perl-helpers/init
   - build-perl
+  - local-lib cache
   - perl -V
   - build-dist
   - cd $BUILD_DIR             # $BUILD_DIR is set by the build-dist command
