--- a/dist.ini
+++ b/dist.ini
@@ -56,7 +56,7 @@ user    = genio
 Git::Check.allow_dirty = META.json
 
 [Test::Portability]
-[Test::CleanNamespaces]
+; [Test::CleanNamespaces]
 [Test::NoTabs]
 [Test::EOL]
 [MetaTests]
@@ -67,6 +67,13 @@ Git::Check.allow_dirty = META.json
 [Test::Kwalitee]
 [Test::Version]
 [Test::Pod::Coverage::Configurable]
+trustme = UV::Handle => qr/^(?:BUILD|DEMOLISH)$/
+trustme = UV::Loop => qr/^(?:BUILD|DEMOLISH)$/
+trustme = UV::Check => qr/^(?:BUILD)$/
+trustme = UV::Idle => qr/^(?:BUILD)$/
+trustme = UV::Poll => qr/^(?:BUILD)$/
+trustme = UV::Prepare => qr/^(?:BUILD)$/
+trustme = UV::Timer => qr/^(?:BUILD)$/
 
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
