--- a/dist.ini
+++ b/dist.ini
@@ -56,7 +56,7 @@ user    = genio
 Git::Check.allow_dirty = META.json
 
 [Test::Portability]
-; [Test::CleanNamespaces]
+[Test::CleanNamespaces]
 [Test::NoTabs]
 [Test::EOL]
 [MetaTests]
