--- a/dist.ini
+++ b/dist.ini
@@ -53,13 +53,7 @@ Git::Check.allow_dirty = META.json
 [Test::Kwalitee]
 [Test::Version]
 [Test::Pod::Coverage::Configurable]
-trustme = UV::Handle => qr/^(?:BUILD|DEMOLISH)$/
-trustme = UV::Loop => qr/^(?:BUILD|DEMOLISH)$/
-trustme = UV::Check => qr/^(?:BUILD)$/
-trustme = UV::Idle => qr/^(?:BUILD)$/
-trustme = UV::Poll => qr/^(?:BUILD)$/
-trustme = UV::Prepare => qr/^(?:BUILD)$/
-trustme = UV::Timer => qr/^(?:BUILD)$/
+trustme = UV::Handle => qr/^new$/
 
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
