--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,7 @@ Pod2Readme.source_filename = lib/UV.pm
 MakeMaker::Awesome.header_file = .mm_awesome_header.pl
 MakeMaker::Awesome.WriteMakefile_arg[0] = %xsbuild
 
-[PkgVersion]
+;[PkgVersion]
 
 [ReadmeAnyFromPod / Markdown_Readme]
 type = markdown
