Remove $VERSION eval. Remove use of [PkgVersion] Alter Travis yml to hopefully run a bit faster and allow failure of 5.16

--- a/dist.ini
+++ b/dist.ini
@@ -35,7 +35,7 @@ MakeMaker::Awesome.WriteMakefile_arg[3] = LIBS    => [ Alien::libuv->libs ]
 MakeMaker::Awesome.WriteMakefile_arg[4] = OBJECT  => '$(O_FILES)'
 
 
-[PkgVersion]
+;[PkgVersion]
 
 [ReadmeAnyFromPod / Markdown_Readme]
 type = markdown
