We now at least build properly on windows. Thanks, xenu!!!
Will look at the failing tests tomorrow.

--- a/dist.ini
+++ b/dist.ini
@@ -31,7 +31,7 @@ MakeMaker::Awesome.header[8] = |};
 MakeMaker::Awesome.WriteMakefile_arg[0] = XSMULTI => 1
 MakeMaker::Awesome.WriteMakefile_arg[1] = XSBUILD => $xsbuild
 MakeMaker::Awesome.WriteMakefile_arg[2] = CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}"
-MakeMaker::Awesome.WriteMakefile_arg[3] = LIBS    => [ Alien::libuv->libs ]
+MakeMaker::Awesome.WriteMakefile_arg[3] = LIBS    => [ Alien::libuv->libs. ' -lpsapi -luserenv -lIphlpapi' ]
 MakeMaker::Awesome.WriteMakefile_arg[4] = OBJECT  => '$(O_FILES)'
 
 
