Removed some of the complexity out of the dist.ini into a header file for MakeMaker::Awesome.

--- a/dist.ini
+++ b/dist.ini
@@ -18,22 +18,8 @@ exclude_filename = t/00-report-prereqs.t
 revision = 2
 installer = MakeMaker::Awesome
 Pod2Readme.source_filename = lib/UV.pm
-MakeMaker::Awesome.delimiter = |
-MakeMaker::Awesome.header[0] = use Config;
-MakeMaker::Awesome.header[1] = |use Alien::libuv ();
-MakeMaker::Awesome.header[2] = |my $xsbuild = {
-MakeMaker::Awesome.header[3] = |  xs => {
-MakeMaker::Awesome.header[4] = |    'lib/UV' => {
-MakeMaker::Awesome.header[5] = |      OBJECT => 'lib/UV$(OBJ_EXT) lib/perl_math_int64$(OBJ_EXT)',
-MakeMaker::Awesome.header[6] = |    },
-MakeMaker::Awesome.header[7] = |  },
-MakeMaker::Awesome.header[8] = |};
-MakeMaker::Awesome.WriteMakefile_arg[0] = XSMULTI => 1
-MakeMaker::Awesome.WriteMakefile_arg[1] = XSBUILD => $xsbuild
-MakeMaker::Awesome.WriteMakefile_arg[2] = CCFLAGS => Alien::libuv->cflags . " -I. -I../.. $Config{ccflags}"
-MakeMaker::Awesome.WriteMakefile_arg[3] = LIBS    => [ Alien::libuv->libs. ' -lpsapi -luserenv -lIphlpapi' ]
-MakeMaker::Awesome.WriteMakefile_arg[4] = OBJECT  => '$(O_FILES)'
-
+MakeMaker::Awesome.header_file = .mm_awesome_header.pl
+MakeMaker::Awesome.WriteMakefile_arg[0] = %xsbuild
 
 [PkgVersion]
 
