--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,8 +11,8 @@ install:
   - 'call .appveyor.cmd perl_setup'
   - '%perl% -V'
   - '%cpanm% -n Alien::Base IO::Socket::SSL'
-  - '%cpanm% --installdeps -n Alien::Base'
-  - '%cpanm% -v Alien::Base'
+  - '%cpanm% --installdeps -n Alien::libuv'
+  - '%cpanm% -v Alien::libuv'
   - '%cpanm% --installdeps -n .'
 
 build: off
