clean up a bit, add appveyor

--- a/dist.ini
+++ b/dist.ini
@@ -81,6 +81,7 @@ stopword = TCP
 stopword = YAY
 stopword = SIGPROF
 stopword = PRs
+stopword = threadpool
 
 [CopyFilesFromBuild]
 copy = Makefile.PL
