--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,8 @@ author           = Daisuke Murase <typester@cpan.org>
 license          = Perl_5
 copyright_holder = Daisuke Murase
 copyright_year   = 2012
-version          = 1.000006
+version          = 1.000007
+is_trial         = 1
 
 [Git::GatherDir]
 exclude_filename = Makefile.PL
@@ -42,7 +43,7 @@ user    = genio
 Git::Check.allow_dirty = META.json
 
 [Test::Portability]
-; [Test::CleanNamespaces]
+[Test::CleanNamespaces]
 [Test::NoTabs]
 [Test::EOL]
 [MetaTests]
