prep for release

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ license          = Perl_5
 copyright_holder = Daisuke Murase
 copyright_year   = 2012
 version          = 1.000008
-is_trial         = 1
+; is_trial         = 1
 
 [Git::GatherDir]
 exclude_filename = Makefile.PL
