--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,6 +7,8 @@ matrix:
 environment:
   matrix:
     - perl_type: strawberry
+      perl_version: 5.28.0.1
+    - perl_type: strawberry
       perl_version: 5.26.1.1
     - perl_type: strawberry
       perl_version: 5.24.3.1
