--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,59 @@
+sudo: false
+addons:
+  apt:
+    packages:
+      - aspell
+      - aspell-en
 language: perl
 perl:
-  - "5.26"
-  - "5.24"
-  - "5.22"
-  - "5.20"
-  - "5.18"
-  - "5.16"
-  - "5.14"
-  - "5.12"
-  - "5.10"
-  - "5.8"
   - "blead"
+  - "blead-thr"
+  - "5.28"
+  - "5.28-thr"
+  - "5.26"
+  - "5.26-thr"
+  - "5.24"
+  - "5.24-thr"
+  - "5.22"
+  - "5.22-thr"
+  - "5.20"
+  - "5.20-thr"
+  - "5.18"
+  - "5.18-thr"
+  - "5.16"
+  - "5.16-thr"
+  - "5.14"
+  - "5.14-thr"
+  - "5.12"
+  - "5.12-thr"
+  - "5.10"
+  - "5.10-thr"
+  - "5.8"
+  - "5.8-thr"
+env:
+  global:
+    - TEST_PARTITIONS=4
+    - AUTHOR_TESTING=1
+    - AUTOMATED_TESTING=1
+    - RELEASE_TESTING=1
 matrix:
-  include:
-    - perl: 5.24
-    #   env: COVERAGE=1   # enables coverage+coveralls reporting
   allow_failures:
-    - perl: blead       # ignore failures for blead perl
-    - perl: 5.16      # ignore failures for blead perl
-sudo: false             # faster builds as long as you don't need sudo access
+    - perl: blead
+    - perl: blead-thr
+cache:
+  directories:
+    - $HOME/perl5
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
-  - source ~/travis-perl-helpers/init
+  - source ~/travis-perl-helpers/init --always-upgrade-modules
   - build-perl
   - perl -V
   - build-dist
-  - cd $BUILD_DIR             # $BUILD_DIR is set by the build-dist command
+  - cd $BUILD_DIR
 install:
-  - cpan-install --deps       # installs prereqs, including recommends
-#   - cpan-install --coverage   # installs converage prereqs, if enabled
-# before_script:
-#   - coverage-setup
-# after_success:
-#   - coverage-report
-notifications:
-  email: false
+  - cpan-install List::Util Test::Spelling Test::Pod Test::Pod::Coverage Test::Version Test::EOL
+  - cpan-install --deps
+script:
+  - perl Makefile.PL
+  - make
+  - prove -v -r -b -s -j$(test-jobs) $(test-files)
