--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -34,12 +34,12 @@ jobs:
         run: perl -V
       - name: Alien::libuv prereqs
         run: |
-          cpanm -n Alien::Base::Wrapper Sort::Versions URI::Escape URI Mojo::DOM58
-          cpanm -n Alien::libtool Alien::automake Alien::m4 Alien::autoconf Alien::Autotools
+          cpanm --notest Alien::Base::Wrapper Sort::Versions URI::Escape URI Mojo::DOM58
+          cpanm --notest Alien::libtool Alien::automake Alien::m4 Alien::autoconf Alien::Autotools
       - name: Alien::libuv
-        run: cpanm -n Alien::libuv
+        run: cpanm --notest Alien::libuv
       - name: Install Dependencies
-        run: cpanm -n --installdeps .
+        run: cpanm --notest --installdeps .
       - run: id
       - name: Run Tests
         run: |
